internal/runtime/parser/sql_parser.go
// Code generated from sql.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // sql

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type sqlParser struct {
	*antlr.BaseParser
}

var SqlParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func sqlParserInit() {
	staticData := &SqlParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "'('", "')'", "';'", "','",
		"'.'", "'*'", "'+'", "'-'", "'/'", "'||'", "'::'", "'~'", "'!~'", "'~*'",
		"'!~*'", "'='", "'>'", "'<'", "'>='", "'<='",
	}
	staticData.SymbolicNames = []string{
		"", "CREATE", "TABLE", "INSERT", "INTO", "VALUES", "PRIMARY", "KEY",
		"DROP", "TRUNCATE", "SET", "TO", "IF", "NOT", "EXISTS", "NULL", "UNIQUE",
		"DEFAULT", "SHOW", "SELECT", "FROM", "WHERE", "GROUP", "LIMIT", "OFFSET",
		"ORDER", "BY", "ASC", "DESC", "UNION", "INTERSECT", "EXCEPT", "ALL",
		"JOIN", "INNER", "LEFT", "RIGHT", "FULL", "CROSS", "ON", "IN", "AND",
		"OR", "IS", "LIKE", "ILIKE", "CASE", "WHEN", "THEN", "ELSE", "END",
		"AS", "AT", "TIME", "ZONE", "EXTRACT", "STRING_TYPE", "INT_TYPE", "FLOAT_TYPE",
		"BOOL_TYPE", "TEXT_TYPE", "VARCHAR_TYPE", "CHAR_TYPE", "SERIAL_TYPE",
		"TIMESTAMP_TYPE", "DATE_TYPE", "INTERVAL_TYPE", "YEAR", "MONTH", "DAY",
		"HOUR", "MINUTE", "SECOND", "WITH", "WITHOUT", "CURRENT_TIMESTAMP",
		"CURRENT_USER", "TRUE", "FALSE", "LPAREN", "RPAREN", "SEMICOLON", "COMMA",
		"DOT", "STAR", "PLUS", "MINUS", "SLASH", "CONCAT", "COLON_COLON", "TILDE",
		"NREGEX", "IREGEX", "NIREGEX", "EQ", "GT", "LT", "GE", "LE", "NE", "OPERATOR_KW",
		"COLLATE", "IDENTIFIER", "PARAMETER", "STRING_LITERAL", "NUMBER", "BLOCK_COMMENT",
		"LINE_COMMENT", "WS",
	}
	staticData.RuleNames = []string{
		"query", "statement", "createTableStatement", "columnDefinition", "columnConstraints",
		"dataType", "intervalFields", "insertStatement", "columnList", "valueList",
		"dropTableStatement", "truncateTableStatement", "setStatement", "showStatement",
		"selectStatement", "unionExceptStatement", "intersectStatement", "primarySelectStatement",
		"selectList", "selectItem", "selectAll", "fromClause", "tableFactor",
		"joinClause", "whereClause", "orderByClause", "orderByItem", "limitValue",
		"offsetValue", "groupByClause", "alias", "expression", "orExpression",
		"andExpression", "notExpression", "comparisonExpression", "concatExpression",
		"additiveExpression", "multiplicativeExpression", "unaryExpression",
		"castExpression", "postfix", "typeName", "primaryExpression", "subqueryExpression",
		"caseExpression", "functionCall", "functionArg", "extractFunction",
		"namePart", "qualifiedName", "columnName", "tableName", "operator",
		"operatorExpr", "value", "typedLiteral",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// sqlParserInit initializes any static state used to implement sqlParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewsqlParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func SqlParserInit() {
	staticData := &SqlParserStaticData
	staticData.once.Do(sqlParserInit)
}

// NewsqlParser produces a new parser instance for the optional input antlr.TokenStream.
func NewsqlParser(input antlr.TokenStream) *sqlParser {
	SqlParserInit()
	this := new(sqlParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &SqlParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "sql.g4"

	return this
}

// sqlParser tokens.
const (
	sqlParserEOF               = antlr.TokenEOF
	sqlParserCREATE            = 1
	sqlParserTABLE             = 2
	sqlParserINSERT            = 3
	sqlParserINTO              = 4
	sqlParserVALUES            = 5
	sqlParserPRIMARY           = 6
	sqlParserKEY               = 7
	sqlParserDROP              = 8
	sqlParserTRUNCATE          = 9
	sqlParserSET               = 10
	sqlParserTO                = 11
	sqlParserIF                = 12
	sqlParserNOT               = 13
	sqlParserEXISTS            = 14
	sqlParserNULL              = 15
	sqlParserUNIQUE            = 16
	sqlParserDEFAULT           = 17
	sqlParserSHOW              = 18
	sqlParserSELECT            = 19
	sqlParserFROM              = 20
	sqlParserWHERE             = 21
	sqlParserGROUP             = 22
	sqlParserLIMIT             = 23
	sqlParserOFFSET            = 24
	sqlParserORDER             = 25
	sqlParserBY                = 26
	sqlParserASC               = 27
	sqlParserDESC              = 28
	sqlParserUNION             = 29
	sqlParserINTERSECT         = 30
	sqlParserEXCEPT            = 31
	sqlParserALL               = 32
	sqlParserJOIN              = 33
	sqlParserINNER             = 34
	sqlParserLEFT              = 35
	sqlParserRIGHT             = 36
	sqlParserFULL              = 37
	sqlParserCROSS             = 38
	sqlParserON                = 39
	sqlParserIN                = 40
	sqlParserAND               = 41
	sqlParserOR                = 42
	sqlParserIS                = 43
	sqlParserLIKE              = 44
	sqlParserILIKE             = 45
	sqlParserCASE              = 46
	sqlParserWHEN              = 47
	sqlParserTHEN              = 48
	sqlParserELSE              = 49
	sqlParserEND               = 50
	sqlParserAS                = 51
	sqlParserAT                = 52
	sqlParserTIME              = 53
	sqlParserZONE              = 54
	sqlParserEXTRACT           = 55
	sqlParserSTRING_TYPE       = 56
	sqlParserINT_TYPE          = 57
	sqlParserFLOAT_TYPE        = 58
	sqlParserBOOL_TYPE         = 59
	sqlParserTEXT_TYPE         = 60
	sqlParserVARCHAR_TYPE      = 61
	sqlParserCHAR_TYPE         = 62
	sqlParserSERIAL_TYPE       = 63
	sqlParserTIMESTAMP_TYPE    = 64
	sqlParserDATE_TYPE         = 65
	sqlParserINTERVAL_TYPE     = 66
	sqlParserYEAR              = 67
	sqlParserMONTH             = 68
	sqlParserDAY               = 69
	sqlParserHOUR              = 70
	sqlParserMINUTE            = 71
	sqlParserSECOND            = 72
	sqlParserWITH              = 73
	sqlParserWITHOUT           = 74
	sqlParserCURRENT_TIMESTAMP = 75
	sqlParserCURRENT_USER      = 76
	sqlParserTRUE              = 77
	sqlParserFALSE             = 78
	sqlParserLPAREN            = 79
	sqlParserRPAREN            = 80
	sqlParserSEMICOLON         = 81
	sqlParserCOMMA             = 82
	sqlParserDOT               = 83
	sqlParserSTAR              = 84
	sqlParserPLUS              = 85
	sqlParserMINUS             = 86
	sqlParserSLASH             = 87
	sqlParserCONCAT            = 88
	sqlParserCOLON_COLON       = 89
	sqlParserTILDE             = 90
	sqlParserNREGEX            = 91
	sqlParserIREGEX            = 92
	sqlParserNIREGEX           = 93
	sqlParserEQ                = 94
	sqlParserGT                = 95
	sqlParserLT                = 96
	sqlParserGE                = 97
	sqlParserLE                = 98
	sqlParserNE                = 99
	sqlParserOPERATOR_KW       = 100
	sqlParserCOLLATE           = 101
	sqlParserIDENTIFIER        = 102
	sqlParserPARAMETER         = 103
	sqlParserSTRING_LITERAL    = 104
	sqlParserNUMBER            = 105
	sqlParserBLOCK_COMMENT     = 106
	sqlParserLINE_COMMENT      = 107
	sqlParserWS                = 108
)

// sqlParser rules.
const (
	sqlParserRULE_query                    = 0
	sqlParserRULE_statement                = 1
	sqlParserRULE_createTableStatement     = 2
	sqlParserRULE_columnDefinition         = 3
	sqlParserRULE_columnConstraints        = 4
	sqlParserRULE_dataType                 = 5
	sqlParserRULE_intervalFields           = 6
	sqlParserRULE_insertStatement          = 7
	sqlParserRULE_columnList               = 8
	sqlParserRULE_valueList                = 9
	sqlParserRULE_dropTableStatement       = 10
	sqlParserRULE_truncateTableStatement   = 11
	sqlParserRULE_setStatement             = 12
	sqlParserRULE_showStatement            = 13
	sqlParserRULE_selectStatement          = 14
	sqlParserRULE_unionExceptStatement     = 15
	sqlParserRULE_intersectStatement       = 16
	sqlParserRULE_primarySelectStatement   = 17
	sqlParserRULE_selectList               = 18
	sqlParserRULE_selectItem               = 19
	sqlParserRULE_selectAll                = 20
	sqlParserRULE_fromClause               = 21
	sqlParserRULE_tableFactor              = 22
	sqlParserRULE_joinClause               = 23
	sqlParserRULE_whereClause              = 24
	sqlParserRULE_orderByClause            = 25
	sqlParserRULE_orderByItem              = 26
	sqlParserRULE_limitValue               = 27
	sqlParserRULE_offsetValue              = 28
	sqlParserRULE_groupByClause            = 29
	sqlParserRULE_alias                    = 30
	sqlParserRULE_expression               = 31
	sqlParserRULE_orExpression             = 32
	sqlParserRULE_andExpression            = 33
	sqlParserRULE_notExpression            = 34
	sqlParserRULE_comparisonExpression     = 35
	sqlParserRULE_concatExpression         = 36
	sqlParserRULE_additiveExpression       = 37
	sqlParserRULE_multiplicativeExpression = 38
	sqlParserRULE_unaryExpression          = 39
	sqlParserRULE_castExpression           = 40
	sqlParserRULE_postfix                  = 41
	sqlParserRULE_typeName                 = 42
	sqlParserRULE_primaryExpression        = 43
	sqlParserRULE_subqueryExpression       = 44
	sqlParserRULE_caseExpression           = 45
	sqlParserRULE_functionCall             = 46
	sqlParserRULE_functionArg              = 47
	sqlParserRULE_extractFunction          = 48
	sqlParserRULE_namePart                 = 49
	sqlParserRULE_qualifiedName            = 50
	sqlParserRULE_columnName               = 51
	sqlParserRULE_tableName                = 52
	sqlParserRULE_operator                 = 53
	sqlParserRULE_operatorExpr             = 54
	sqlParserRULE_value                    = 55
	sqlParserRULE_typedLiteral             = 56
)

// IQueryContext is an interface to support dynamic dispatch.
type IQueryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Statement() IStatementContext
	SEMICOLON() antlr.TerminalNode

	// IsQueryContext differentiates from other interfaces.
	IsQueryContext()
}

type QueryContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyQueryContext() *QueryContext {
	var p = new(QueryContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sqlParserRULE_query
	return p
}

func InitEmptyQueryContext(p *QueryContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sqlParserRULE_query
}

func (*QueryContext) IsQueryContext() {}

func NewQueryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *QueryContext {
	var p = new(QueryContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = sqlParserRULE_query

	return p
}

func (s *QueryContext) GetParser() antlr.Parser { return s.parser }

func (s *QueryContext) Statement() IStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *QueryContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(sqlParserSEMICOLON, 0)
}

func (s *QueryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *QueryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *QueryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(sqlListener); ok {
		listenerT.EnterQuery(s)
	}
}

func (s *QueryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(sqlListener); ok {
		listenerT.ExitQuery(s)
	}
}

func (p *sqlParser) Query() (localctx IQueryContext) {
	localctx = NewQueryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, sqlParserRULE_query)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(114)
		p.Statement()
	}
	p.SetState(116)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == sqlParserSEMICOLON {
		{
			p.SetState(115)
			p.Match(sqlParserSEMICOLON)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SelectStatement() ISelectStatementContext
	CreateTableStatement() ICreateTableStatementContext
	InsertStatement() IInsertStatementContext
	DropTableStatement() IDropTableStatementContext
	TruncateTableStatement() ITruncateTableStatementContext
	SetStatement() ISetStatementContext
	ShowStatement() IShowStatementContext

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sqlParserRULE_statement
	return p
}

func InitEmptyStatementContext(p *StatementContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sqlParserRULE_statement
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = sqlParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) SelectStatement() ISelectStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISelectStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISelectStatementContext)
}

func (s *StatementContext) CreateTableStatement() ICreateTableStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICreateTableStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICreateTableStatementContext)
}

func (s *StatementContext) InsertStatement() IInsertStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInsertStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInsertStatementContext)
}

func (s *StatementContext) DropTableStatement() IDropTableStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDropTableStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDropTableStatementContext)
}

func (s *StatementContext) TruncateTableStatement() ITruncateTableStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITruncateTableStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITruncateTableStatementContext)
}

func (s *StatementContext) SetStatement() ISetStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISetStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISetStatementContext)
}

func (s *StatementContext) ShowStatement() IShowStatementContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IShowStatementContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IShowStatementContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(sqlListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(sqlListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (p *sqlParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, sqlParserRULE_statement)
	p.SetState(125)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case sqlParserSELECT, sqlParserLPAREN:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(118)
			p.SelectStatement()
		}

	case sqlParserCREATE:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(119)
			p.CreateTableStatement()
		}

	case sqlParserINSERT:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(120)
			p.InsertStatement()
		}

	case sqlParserDROP:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(121)
			p.DropTableStatement()
		}

	case sqlParserTRUNCATE:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(122)
			p.TruncateTableStatement()
		}

	case sqlParserSET:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(123)
			p.SetStatement()
		}

	case sqlParserSHOW:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(124)
			p.ShowStatement()
		}
